# Duck-ThursdayProtocol

./: .env.example  .gitignore  Duck-Of-Apocalypse.sln  Duck.spec  HAMMERSPOON.md  README.md  aboutme.md  all.canvas  automation.py  automation_linux.py  automation_mac.py  build_portable.sh  concept.md  config.json  config.py  duck.py  duck_portable.py  hotkey_listener.py  launcher.py  pyproject.toml  requirements.txt  roadmap.md  tg.md  unit.lua
DOA.Desktop/: App.axaml  App.axaml.cs  DOA.Desktop.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
backend/DOA.Core/: Program.cs  Program.cs.save
backend/DOA.Core/Config/: doa.config.json
backend/DOA.Core/Models/: AppConfig.cs  CommandRequest.cs  CommandResponse.cs
backend/DOA.Core/Properties/: launchSettings.json
backend/DOA.Core/Services/: CommandDispatcher.cs  ConfigService.cs  NoteService.cs  PathService.cs  ShellService.cs  SystemService.cs
backend/DOA.Core/wwwroot/: index.css  index.html  index.js
thursday/: __init__.py
thursday/app/: action_log.py  agent_profile.py  config.py  main.py  permissions.py  router.py  session_store.py
thursday/interfaces/: __init__.py  telegram_bot.py
thursday/tools/: __init__.py  files.py  opencode.py  web.py
